# CompAssign

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  NEXT_SESSION_HANDOVER.md  PRODUCTION_ARCHITECTURE.md  README.md  README_SOFTMAX.md  environment-rt-inference.yml  environment.yml  pyproject.toml  pytest.ini  test_decoy_bug.py
docs/: README.md  RT_PROD_PIPELINE.md  TASKS.md  active_learning_mi_findings.md  bayesian_models.md  index.md  k_parameter_findings.md  multi_candidate_solution.md  precision_optimization.md  probability_calibration.md  public_datasets_for_testing.md  pymc_generative_peak_assignment.md  results_guide.md  rt_lasso_local_models_mapping.md  run_covshift_holdout.md  run_descriptor_ablation.md  run_descriptor_generalization.md  run_descriptor_shift.md  run_rt_prod_real_test.md  softmax_implementation.md  synthetic_data_generation.md
scripts/: __init__.py  ablation_study.py  aggregate_al_results.py  analyze_precision.py  assess_active_learning.py  clear_verification.sh  clone_compassign_remote.sh  compare_models.py  compare_pymc_vs_sklearn_collapsed_ridge.sh  create_synthetic_data.py  download_rt_prod_results_from_remote.sh  generate_benchmark_report.py  install_ssh_key_on_remote.sh  pachyderm_fetch_rt_training.sh  plot_rt_multilevel.sh  rsync.sh  run_ablation.sh  run_ablation_poetry.sh  run_comparison.sh  run_overnight_rt_pymc_experiments.sh  run_overnight_rt_pymc_experiments_cap5.sh  run_overnight_rt_pymc_experiments_cap5_comp_hier.sh  run_rt_prod.sh  run_rt_prod_eval.sh  run_rt_pymc_chem_hier_bench.sh  run_rt_pymc_multilevel_cap100.sh  run_rt_pymc_multilevel_cap100_minimal.sh  run_rt_report_all.py  run_rt_report_all.sh  run_simplified_cap20.sh  run_training.sh  run_two_stage.sh  run_validation.sh  run_verification.sh  setup_environment.sh  setup_poetry.sh  test_k_values.py  train.py  train_challenging.py  train_two_stage.py  (+4 more)
templates/: rt_comparison_README.md
tests/: conftest.py  test_aggregate_al_results.py  test_assess_active_learning_cli.py  test_chemical_feature_utils.py  test_descriptor_benefit.py  test_eval_rt_coeff_summaries_by_species_cluster.py  test_eval_rt_coeff_summaries_by_support.py  test_exchangeability.py  test_presence_prior.py  (+13 more)
(+198 files in other folders)
