[tool.poetry]
name = "compassign"
version = "1.0.0"
description = "Bayesian framework for ultra-high precision compound assignment in untargeted metabolomics"
authors = ["Metabolon Internal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymc = "^5.10.0"
arviz = "^0.17.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
pytest = "^7.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.poetry.scripts]
train = "scripts.train:main"
